# Python-Atomizer

./: .gitignore  README.md  desciAtomize.ts  helper.py  index.ts  notes.txt  package-lock.json  package.json  profiled.ts  requirements.txt  static.ts  types.ts
inputs/: example.py  pyproject.toml  temp.py
inputs/inputs/: morans_example.py
outputs/: example.py
scripts/: createManifest.ts  extractor.ts  getSecondaryFunctions.ts  helper.py  moduleFuncExtractor.ts  moduleFuncFinder.ts  referencer.ts  static.ts  types.ts  uploader.ts
testing/: quadrilateral.py  read.py
testing/scripts/: area.py  perimeter.py  randomPointsGenerator.py
